[test-crawler] save file

--- a/test-crawler/dafa5f5aa79c0a21852185c8c664a5d8/pin/5be4bfe4e2b10e63f701fd45addb6038.html
+++ b/test-crawler/dafa5f5aa79c0a21852185c8c664a5d8/pin/5be4bfe4e2b10e63f701fd45addb6038.html
@@ -44,7 +44,7 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cookie-bar/themes/cookiebar.min.css"></head>
 
-<body style="margin-bottom: 33px;">
+<body>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
@@ -442,7 +442,7 @@
     </div>
 </div>
 
-<div id="cookie-bar" style="display: block; bottom: 0px; opacity: 0.2;">
+<div id="cookie-bar" style="display: block; bottom: 0px; opacity: 0.6;">
     <p>This website makes use of cookies to enhance browsing experience and provide additional functionality.
         <a rel="nofollow noopener noreferrer" id="cookie-bar-prompt-button" data-alt="Privacy policy">Details</a>
         <a rel="nofollow noopener noreferrer" id="cookie-bar-main-privacy-link" href="">Privacy policy</a>
