--- a/test-crawler/edfe0334f95d7d033c0e1d295c9ebbc4/pin/90ca7307bb441147f97646177226a1d0.html
+++ b/test-crawler/edfe0334f95d7d033c0e1d295c9ebbc4/pin/90ca7307bb441147f97646177226a1d0.html
@@ -241,7 +241,7 @@
     </div>
 </div>
 
-<div id="cookie-bar" style="display: block; bottom: 0px; opacity: 0.30000000000000004;">
+<div id="cookie-bar" style="display: block; bottom: 0px; opacity: 0.1;">
     <p>This website makes use of cookies to enhance browsing experience and provide additional functionality.
         <a rel="nofollow noopener noreferrer" id="cookie-bar-prompt-button" data-alt="Privacy policy">Details</a>
         <a rel="nofollow noopener noreferrer" id="cookie-bar-main-privacy-link" href="">Privacy policy</a>
